--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 <header class="header">
   <div class="inner d--flex">
-    <div class="header_logo">
+    <div class="header-logo">
       <i class="fas fa-archway fa-3x"></i>
     </div>
     <nav>
       <ul>
         <li class="contact">
-          <a class="contact_inline" href="#">contact</a>
-          <span class="nav_toggle">
+          <a class="contact-inline" href="#">contact</a>
+          <span class="nav-toggle">
             <i></i>
             <i></i>
             <i></i>
@@ -33,24 +33,24 @@
 <!--ヘッダーここまで-->
 <main>
   <section class="keyvisual">
-    <div class="keyvisual_img">
-      <div class="keyvisual_copy">
+    <div class="keyvisual-img">
+      <div class="keyvisual-copy">
         <h1>WEB PRODUCTION COMPANY</h1>
-        <p class="keyvisual_subcopy">DIRECTION,CONTENT MARKETING</p>
+        <p class="keyvisual-subcopy">DIRECTION,CONTENT MARKETING</p>
       </div>
     </div>
   </section>
   <!-- メインタイトル、サブタイトル、背景画像がある部分ここまで-->
   <section class="work">
     <div class="inner work--flex">
-      <div class="pc_illust_parents">
-        <div class="pc_illust">
+      <div class="pc-illust-parents">
+        <div class="pc-illust">
           <img src="./img/pc/pc.png" alt="PCイラスト">
         </div>
       </div>
-      <div class="work_catch_copy">
+      <div class="work-catch-copy">
         <h2 class="work_copy">WORK</h2>
-        <p class="work_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        <p class="work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis
@@ -63,34 +63,34 @@
   <!-- 「WORK」のタイトルがある部分はここまで -->
   <section class="skills">
     <div class="inner">
-      <h2 class="skills_copy">WE ARE SKILLS</h2>
-      <ul class="skills_icon_area">
-        <li class="skills_card">
+      <h2 class="skills-copy">WE ARE SKILLS</h2>
+      <ul class="skills-icon-area">
+        <li class="skills-card">
           <a href="#">
             <img src="./img/skills/skills_1.png" alt="1">
           </a>
         </li>
-        <li class="skills_card">
+        <li class="skills-card">
           <a href="#">
             <img src="./img/skills/skills_2.png" alt="2">
           </a>
         </li>
-        <li class="skills_card">
+        <li class="skills-card">
           <a href="#">
             <img src="./img/skills/skills_3.png" alt="3">
           </a>
         </li>
-        <li class="skills_card">
+        <li class="skills-card">
           <a href="#">
             <img src="./img/skills/skills_4.png" alt="4">
           </a>
         </li>
-        <li class="skills_card">
+        <li class="skills-card">
           <a href="#">
             <img src="./img/skills/skills_5.png" alt="5">
           </a>
         </li>
-        <li class="skills_card">
+        <li class="skills-card">
           <a href="#">
             <img src="./img/skills/skills_6.png" alt="6">
           </a>
@@ -100,7 +100,7 @@
   </section><!-- 「WE ARE SKILLS」のタイトルがある部分-->
   <section class="plan">
     <div class="inner">
-      <h2 class="select_plan_copy">SELECT PLAN</h2>
+      <h2 class="select-plan-copy">SELECT PLAN</h2>
       <table>
         <thead>
           <tr>
@@ -112,7 +112,7 @@
         </thead>
         <tbody>
           <tr>
-            <td class="plan_heading">PRISE</td>
+            <td class="plan-heading">PRISE</td>
             <td>¥100,000</td>
             <td>¥200,000</td>
             <td>¥300,000</td>
@@ -124,19 +124,19 @@
             <td>Manuscript,HTML,PSD</td>
           </tr>
           <tr>
-            <td class="plan_heading">ANALYSIS</td>
+            <td class="plan-heading">ANALYSIS</td>
             <td>◯</td>
             <td>◯</td>
             <td>◯</td>
           </tr>
           <tr>
-            <td class="plan_heading">IMPROVEMENT</td>
+            <td class="plan-heading">IMPROVEMENT</td>
             <td>×</td>
             <td>◯</td>
             <td>◯</td>
           </tr>
           <tr>
-            <td class="plan_heading">DESIGN</td>
+            <td class="plan-heading">DESIGN</td>
             <td>×</td>
             <td>×</td>
             <td>◯</td>
@@ -146,25 +146,25 @@
     </div>
   </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
   <nav class="sns">
-    <ul class="inner sns_flex">
-      <li class="sns_icon">
+    <ul class="inner sns-flex">
+      <li class="sns-icon">
         <i class="fab fa-facebook-f"></i>
       </li>
-      <li class="sns_icon">
+      <li class="sns-icon">
         <i class="fab fa-dribbble"></i>
       </li>
-      <li class="sns_icon">
+      <li class="sns-icon">
         <i class="fab fa-twitter"></i>
       </li>
-      <li class="sns_icon">
+      <li class="sns-icon">
         <i class="far fa-envelope"></i><!-- "fab fa-envelope"はproなので文字化けしてしまいました。solidバージョンで代用します。-->
       </li>
     </ul>
   </nav><!-- iconが並んでいる部分 -->
 </main>
   <footer>
-    <div class="inner footer_flex">
-      <p class="footer_copy">Copyright(C)</p>
+    <div class="inner footer-flex">
+      <p class="footer-copy">Copyright(C)</p>
     </div>
   </footer>
   <!-- Wrokの部分のテキストはこちらを使ってください -->
