--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="work-catch-copy">
-        <h2 class="work_copy">WORK</h2>
+        <h2 class="work-copy">WORK</h2>
         <p class="work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -118,7 +118,7 @@
             <td>¥300,000</td>
           </tr>
           <tr>
-            <td class="plan_heading">DELIVERY</td>
+            <td class="plan-heading">DELIVERY</td>
             <td>Manuscript</td>
             <td>HTML</td>
             <td>Manuscript,HTML,PSD</td>
